[project]
name = "hellopython5tob"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramfis Velazques",email = "ramfisvelazquez47@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyfiglet (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
